# BugRC

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md  cve_pattern_library.v4.clean.json  cve_pattern_library.v4.clean.summary.json
examples/: analysis_config.example.json  analysis_result.example.json  bug_report.example.json  cve_collection_result.example.json  cve_patch_extraction.example.json  cve_pattern_library.example.json  cve_pipeline_manifest.example.json  cve_project_advisory.example.json  cve_root_cause_dataset.example.json  cve_root_cause_mining.example.json  cve_semantic_alignment.example.json
reproduce_openssl_sm2_case/: openssl_sm2_case.json
results/: README.md  artifact_manifest.json
scripts/: arvo_meta_bugrc_eval.py  bootstrap_cve_corpus.py  bugrc_ablation_from_results.py  build_bugrc_priors_from_arvo.py  build_cve_dataset_and_patterns.py  build_cve_semantic_patterns.py  build_llm_guided_refinement_plan.py  build_patterns_from_cve_dataset.py  build_remaining_refinement_targets.py  llm_judge_arvo_strict_candidates.py  magma_bugrc_eval.py  merge_arvo_enhanced_full.py  prepare_arvo_enhanced_full_shards.py  prepare_arvo_validation_targets.py  report_case.py  report_openssl_sm2_case.py  resume_cve_bootstrap_filtered.py  run_cve_source_pipeline.sh  run_llm_guided_source_refinement.py  run_magma_external_baselines.py  run_openssl_sm2_case.py  secondary_validate_refined_cve_dataset.py  select_cve_source_validation_targets.py  summarize_arvo_official_suspicious.py  validate_arvo_patch_targets.py  validate_cve_outputs_with_llm.py  (+2 more)
(+128 files in other folders)
